Finish clone principal page of google Chrome

--- a/src/html/partials/page.html
+++ b/src/html/partials/page.html
@@ -12,7 +12,7 @@
       <fieldset class="container">
         <span class="container__icon-search"></span>
         <input
-          placeholder="Buscar en Google o escribir una URLS"
+          placeholder="Buscar en Google o escribir una URL"
           type="text"
           name="search"
           class="container__input"
