--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,1 +1,26 @@
+.footer{
+    display: flex;
+    justify-content: space-between;
+    background-color:#f2f2f2 ;
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    align-items: center;
+    font-size: 3px;
+    border-top: 1px solid #e4e4e4;
+    
+    &__ul{
+        display: flex;
+        list-style: none;
+        padding: 15px;
 
+        &-li{
+            padding: 15px;
+
+            &-a{
+                color: #5f6368;
+            }
+        }
+    }
+}
