--- a/src/html/partials/page.html
+++ b/src/html/partials/page.html
@@ -1,7 +1,7 @@
 <main>
   <section class="google">
     <img
-      src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
+      src="https://assets.stickpng.com/images/google-new-19.png
       alt="Icono google"
       title="Icono google"
       class="google__icon"
